packages/yew-macro/tests/html_macro/missing-props-diagnostics-fail.stderr
error[E0277]: not all required properties have been provided for `FooProps`
 --> tests/html_macro/missing-props-diagnostics-fail.rs:6:10
  |
6 |         <Foo />
  |          ^^^ missing required properties
  |
  = help: the trait `HasAllProps<FooProps, (_, _)>` is not implemented for `CheckFooPropsAll<AssertAllProps>`
  = note: required for `AssertAllProps` to implement `AllPropsFor<FooPropsBuilder, (_, _)>`
note: required by a bound in `yew::html::component::properties::__macro::PreBuild::<Token, B>::build`
 --> $WORKSPACE/packages/yew/src/html/component/properties.rs
  |
  |         pub fn build<How>(self) -> B::Output
  |                ----- required by a bound in this associated function
  |         where
  |             Token: AllPropsFor<B, How>,
  |                    ^^^^^^^^^^^^^^^^^^^ required by this bound in `PreBuild::<Token, B>::build`
  = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: not all required properties have been provided for `FooProps`
  --> tests/html_macro/missing-props-diagnostics-fail.rs:13:10
   |
13 |         <Foo bar={"bar".to_string()} />
   |          ^^^ missing required properties
   |
   = help: the trait `HasAllProps<FooProps, (HasFooPropsbar<AssertAllProps>, &dyn HasProp<baz, _>)>` is not implemented for `CheckFooPropsAll<HasFooPropsbar<AssertAllProps>>`
   = note: required for `HasFooPropsbar<AssertAllProps>` to implement `AllPropsFor<FooPropsBuilder, (HasFooPropsbar<AssertAllProps>, &dyn HasProp<baz, _>)>`
note: required by a bound in `yew::html::component::properties::__macro::PreBuild::<Token, B>::build`
  --> $WORKSPACE/packages/yew/src/html/component/properties.rs
   |
   |         pub fn build<How>(self) -> B::Output
   |                ----- required by a bound in this associated function
   |         where
   |             Token: AllPropsFor<B, How>,
   |                    ^^^^^^^^^^^^^^^^^^^ required by this bound in `PreBuild::<Token, B>::build`
   = note: this error originates in the macro `html` (in Nightly builds, run with -Z macro-backtrace for more info)
